--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,10 +49,26 @@ cursor: pointer;
 }
 /*footer*/
 footer{
-  color:white;
-  width: 100% ;
-  height: 21px ;
+
+  width: 100%;
   background: #0B0B0B;
-  margin-top: 372px;
+
+}
+
+p{
+
+  font-size: 20px;
+  color:white;
+  height: 1px ;
+  margin-top: 360px;
   text-align: center;
+
+}
+
+.link a {
+  padding-left: 96%;
+  color : white;
+  border: 2px solid #0B0B0B;
+  background-color: #0B0B0B;
+
 }
